update tx format.

--- a/app.conf
+++ b/app.conf
@@ -1,7 +1,7 @@
 [redis]
-conn=54.250.115.98:6379
-dbNum=0
-password=redis20220217
+conn=35.75.90.2:6379
+dbNum=8
+password=root@123
 
 [chain]
 httest=ws://13.40.31.153:8546
