add more modules.

--- a/app.conf
+++ b/app.conf
@@ -9,6 +9,9 @@ httest=ws://13.40.31.153:8546
 [monitor]
 account=0x54aa085c8a8b978586282c1895ff527572e24f88
 
+[apiserver]
+addr=0.0.0.0:9800
+
 [log]
 level=debug
 filename=d.log
