--- a/app.conf
+++ b/app.conf
@@ -1,13 +1,14 @@
 [redis]
 conn=35.75.90.2:6379
-dbNum=0
+dbNum=8
 password=root@123
 
 [chain]
 httest=ws://13.40.31.153:8546
 
 [monitor]
-account=0x54aa085c8a8b978586282c1895ff527572e24f88
+#account=0x54aa085c8a8b978586282c1895ff527572e24f88
+account=0x0335dc2E445D864F8076f5C16C3D545666997Cc6
 
 [apiserver]
 addr=0.0.0.0:9800
