add redis storage support.

--- a/app.conf
+++ b/app.conf
@@ -3,6 +3,11 @@ conn=35.75.90.2:6379
 dbNum=8
 password=root@123
 
+[storage]
+conn=35.75.90.2:6379
+dbNum=1
+password=root@123
+
 [chain]
 httest=ws://13.40.31.153:8546
 
